[workspace]
members = [ 
    "apps/yellowstone-fumarole-cli",
    "crates/yellowstone-fumarole-client",
    "examples/rust",
]
resolver = "2"

[workspace.package]
authors = ["Triton One"]
version = "0.1.1+solana.2.1.11"
edition = "2021"
homepage = "https://triton.one"
repository = "https://github.com/rpcpool/yellowstone-fumarole"
license = "AGPL-3.0"
keywords = ["solana"]
publish = false


[workspace.dependencies]
async-trait = "~0.1.88"
clap = "^4.5.7"
clap-verbosity-flag = "^3.0.2"
futures = "~0.3.31"
fxhash = "~0.2.1"
http = "^1.2.0"
http-body-util = "~0.1"
hyper = "^1.3.1"
hyper-util = "~0.1.11"
lazy_static = "~1.5.0"
prometheus = "~0.14.0"
prost = "~0.13.0"
protobuf-src = "~1.1.0"
serde = "~1.0.203"
serde_with = "^3.8.1"
serde_yaml = "~0.9.34"
solana-sdk = "~2.1.21"
tabled = "~0.18.0"
thiserror = "^1.0.61"
tokio = "1"
tokio-stream = "~0.1.11"
tonic = "~0.12.3"
tonic-build = "~0.12.3"
tower = "~0.5.2"
tracing = "~0.1.41"
tracing-subscriber = { version = "~0.3.18", features = ["env-filter"] }
uuid = { version = "1" }
yellowstone-fumarole-client = { path = "crates/yellowstone-fumarole-client", version = "0.2.0-pre.3+solana.2.1" }
yellowstone-grpc-client = "5"
yellowstone-grpc-proto = "5"

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"
