[workspace]
members = [ 
    "apps/yellowstone-fumarole-cli",
    "crates/yellowstone-fumarole-client",
    "examples/rust",
]
resolver = "2"

[workspace.package]
authors = ["Triton One"]
edition = "2021"
homepage = "https://triton.one"
repository = "https://github.com/rpcpool/yellowstone-fumarole"
license = "AGPL-3.0"
keywords = ["solana"]
publish = false


[workspace.dependencies]
async-trait = "~0.1.88"
bs58 = "~0.5.1"
bytesize = "2"
clap = "^4.5.7"
clap-verbosity-flag = "^3.0.2"
futures = "~0.3.31"
fxhash = "~0.2.1"
http = "^1.2.0"
http-body-util = "~0.1"
hyper = "^1.3.1"
hyper-util = "~0.1.11"
lazy_static = "~1.5.0"
prometheus = "~0.14.0"
prost = "0.12"
protobuf-src = "~1.1.0"
serde = "~1.0.203"
serde_json = "~1.0.142"
serde_with = "^3.8.1"
serde_yaml = "~0.9.34"
solana-sdk = "~1.18.22"

tabled = "~0.18.0"
thiserror = "^1.0.61"
tokio = "1"
tokio-stream = "~0.1.17"
tonic = "0.10"
tonic-build = "0.10"
tower = "~0.5.2"
tracing = "~0.1.41"
tracing-subscriber = { version = "~0.3.18", features = ["env-filter"] }
uuid = { version = "1" }
yellowstone-fumarole-client = { path = "crates/yellowstone-fumarole-client", version = "0.2.1+solana.2" }
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v1.15.1+solana.1.18.22" }  
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v1.15.1+solana.1.18.22" }   

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"
