[workspace]
members = [ 
    "apps/yellowstone-fumarole-cli",
    "crates/yellowstone-fumarole-client",
    "examples/rust",
]
resolver = "2"

[workspace.package]
authors = ["Triton One"]
edition = "2024"
homepage = "https://triton.one"
repository = "https://github.com/rpcpool/yellowstone-fumarole"
license = "AGPL-3.0"
keywords = ["solana"]
publish = false


[workspace.dependencies]
async-trait = "~0.1.88"
bs58 = "~0.5.1"
bytesize = "2"
clap = "^4.5.7"
clap-verbosity-flag = "^3.0.2"
crossbeam = "0.8.0"
futures = "~0.3.31"
http = "^1.2.0"
http-body-util = "~0.1"
hyper = "^1.3.1"
hyper-util = "~0.1.11"
lazy_static = "~1.5.0"
prometheus = "~0.14.0"
prost = "~0.14.0"
protoc-bin-vendored = "3.2.0"
rand = "0.9.0"
rustc-hash = "2.0.0"
serde = "1.0.203"
serde_json = "~1.0.142"
serde_with = "^3.8.1"
serde_yaml = "~0.9.34"
semver = "1.0.27"
solana-clock = "3.0.0"
solana-pubkey = "3.0.0"
solana-signature = "3.0.0"
tabled = "~0.20.0"
thiserror = "2.0.0"
tokio = "1"
tokio-stream = "0.1.17"
tokio-util = "0.7.0"
tonic = "~0.14.0"
tonic-build = "~0.14.0"
tonic-prost = "~0.14.0"
tonic-prost-build = "~0.14.0"
tower = "~0.5.2"
tracing = "~0.1.41"
tracing-subscriber = { version = "~0.3.18", features = ["env-filter"] }
uuid = { version = "1" }
yellowstone-fumarole-client = { path = "crates/yellowstone-fumarole-client", version = "0.4.0+solana.3" }
yellowstone-grpc-client = "12.0.0"
yellowstone-grpc-proto = "12.0.0"

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "warn"
trivially_copy_pass_by_ref = "deny"
