[package]
name = "yellowstone-fumarole-cli"
authors.workspace = true
version = "0.1.0-pre1"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
publish.workspace = true

[[bin]]
name = "fume"

[dependencies]
clap = { workspace = true, features = ["derive"] }
clap-verbosity-flag = { workspace = true, features = ["tracing"] }
futures = { workspace = true }
solana-sdk = { workspace = true }
serde_yaml = { workspace = true }
tabled = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
yellowstone-fumarole-client = { workspace = true }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
