[package]
name = "yellowstone-fumarole-client"
description = "Yellowstone Fumarole Client"
version = "0.1.1-pre.2+solana.2.1.11"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
publish = true

[features]
default = ["prometheus"]
prometheus = ["dep:prometheus"]

[package.metadata]
include = [
    "proto/**",
    "yellowstone-grpc-proto/**",
]


[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
lazy_static = { workspace = true }
prometheus = { workspace = true, optional = true }
prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true }
serde_yaml = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tokio-stream = { workspace = true }
tonic = { workspace = true, features = ["tls", "tls-native-roots"] }
tower = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
yellowstone-grpc-proto = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
protobuf-src = { workspace = true }

[lints]
workspace = true