[package]
name = "yellowstone-fumarole-client"
description = "Yellowstone Fumarole Client"
version = "0.2.0-rc3+solana.2"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
publish = true

[features]
default = []
prometheus = ["dep:prometheus"]

[package.metadata]
include = [
    "proto/**",
    "yellowstone-grpc-proto/**",
]

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
fxhash = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
solana-clock = { workspace = true }
lazy_static = { workspace = true }
prometheus = { workspace = true, optional = true }
prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tokio-stream = { workspace = true }
tonic = { workspace = true, features = ["tls", "tls-native-roots", "gzip", "zstd"] }
tower = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
yellowstone-grpc-proto = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
protobuf-src = { workspace = true }

[lints]
workspace = true