[package]
name = "yellowstone-fumarole-client-simple"
description = "Simple Yellowstone Fumarole Client examples"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
publish = { workspace = true }

[[bin]]
name = "example-fumarole"

[[bin]]
name = "dragonsmouth"

[dependencies]
solana-sdk = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
yellowstone-fumarole-client = { workspace = true }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }

[lints]
workspace = true