[tool.poetry]
name = "yellowstone-fumarole-client"
version = "0.1.0rc2"
homepage = "https://github.com/rpcpool/yellowstone-fumarole"
repository = "https://github.com/rpcpool/yellowstone-fumarole"
description = "Yellowstone Fumarole Python Client"
authors = ["Louis-Vincent <louis-vincent@triton.one>", "Triton One <help@triton.one>"]
readme = "README.md"

packages = [
    { include = "yellowstone_fumarole_proto" },
    { include = "yellowstone_fumarole_client" },
]

[tool.poetry.dependencies]
python = "^3.13"
click = "^8.1.7"
grpcio = "^1.71.1"
protobuf = "^5.29.1"
toml = "^0.10.2"
base58 = "^2.1.1"
tabulate = "^0.9.0"
asyncio = "^3.4.3"
pyyaml = "^6.0.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.68.1"
black = "^24.10.0"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
